修复点击动画-火花产生的一些BUG
鼠标特效开启需要在 `_config.fluid.yml`中设定才会生效

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1080,3 +1080,5 @@ static_prefix:
   twikoo: https://lib.baomitu.com/twikoo/1.4.17/
 
   hint: https://lib.baomitu.com/hint.css/2.7.0/
+
+cursor: fireworks
