🐞 fix(env): 尝试使用patch-package
由于接入自动化部署，导致node_modules的修改在云环境丢失，最终页面的渲染失败，尝试使用patch-package管理修改。

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "patch-package": "^8.0.0"
   }
 }
