--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -841,7 +841,7 @@ about:
   avatar: /img/headicon.jpg
   #/img/avatar.png
   name: "Yui"
-  intro: "社畜一枚 / 计院摸鱼选手 / 为斯卡蒂献上♥"
+  intro: "ECNU CS Postgraduate/ 一枚努力学习中的社畜"
   #"Welcome To Yui's Blog" 
   #"An elegant theme for Hexo"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
